# Utils

./: .gitignore  CMakeLists.txt  README.md
include/dmUtils/: DynamicBitSet.hpp  DynamicBitSet.tpl  FixedSizeList.hpp  FixedSizeList.tpl  RessourceVector.hpp  RessourceVector.tpl  TypeChoiceTpl.hpp  maths.hpp  maths.tpl
unittest/: dmUtilsUnitTests.cpp  dmUtilsUnitTests.hpp  test_dynamicBitSet.cpp  test_fixedSizeList.cpp  test_ressourcevector.cpp  test_utils.cpp  test_utils.hpp
